components/dashboard/manifests/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: $(NS_BOBBYCAR)
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: dashboard
    deploymentconfig: dashboard
  sessionAffinity: None
  type: ClusterIP
