components/dashboard/manifests/dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dashboard
  name: dashboard
  namespace: $(NS_BOBBYCAR)
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dashboard
    weight: 100
  wildcardPolicy: None
